--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.google.appengine</groupId>
-    <artifactId>appengine-maven-plugin</artifactId>
+    <artifactId>appengine-maven-plugin-oauth2-config</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.9.10-SNAPSHOT</version>
+    <version>1.9.9</version>
     <name>A Maven Plugin for running and deploying appengine applications</name>
     <description>
         The App Engine maven plugin which can be used to interact with
