--- a/src/it/maven-plugin-test-app/pom.xml
+++ b/src/it/maven-plugin-test-app/pom.xml
@@ -48,7 +48,7 @@
         <plugins>
             <plugin>
                 <groupId>com.google.appengine</groupId>
-                <artifactId>appengine-maven-plugin</artifactId>
+                <artifactId>appengine-maven-plugin-oauth2-config</artifactId>
                 <version>1.9.9-SNAPSHOT</version>
                 <configuration>
                     <version>1</version>
